Registro de Alumno y Profesores cambiado (TipoDisciplina)

--- a/src/views/alumnos.hbs
+++ b/src/views/alumnos.hbs
@@ -1,4 +1,4 @@
-<h1>Listado de alumnos existes posibles para eliminar</h1>
+<h1>Listado de alumnos existentes</h1>
 <ul>
 {{#each alumno as | Alumno |}}
 <li>
