--- a/src/views/crear_alumno.hbs
+++ b/src/views/crear_alumno.hbs
@@ -75,6 +75,14 @@
                 <!-- ASIGNATURAS -->
               <div id="datos_asignaturas" style="display:none;">
 								  <h1>ASIGNATURAS</h1>
+                  <div class="form-group">
+										<label class="control-label">¿A que tipo de disciplina perteneces?</label>
+										<select class="form-control" name="tipoDisciplina" id="tipoDisciplina">
+									 	   <option disabled selected>-----</option>
+										   <option value="FP">FP</option>
+										   <option value="Etapa">ESO o Bachiller</option>
+										</select>
+									</div>
                     <div class="form-group">
                         <label  class="control-label">Etapa</label>
                       <select class="form-control" name="nombre_etapa" id="nombre_etapa">
@@ -173,7 +181,7 @@
 </div>
 
 
-<!-- SCRIPT PARA ILUSION -->
+<!--SCRIPT GEMINIS-->
 
 <script>
 
@@ -217,7 +225,7 @@
 
 	})
 
-// PARA ATRAS 
+// HACIA ATRAS
 
 	button_4.addEventListener('click' , () => {
 
@@ -292,13 +300,39 @@
 
 	(async () => {
 
+            const tipoDisciplinaEl = document.querySelector('#tipoDisciplina')
             const etapaEl = document.querySelector("#nombre_etapa");
             const n_cursosEl = document.querySelector("#n_cursos");
             const fp = document.querySelector("#nombre_fp");
-            
+
             const responseEtapa  = await fetch('/select_etapa');
             const etapa = await responseEtapa.json();
-            etapa.map(e => {
+            let etapaFilter = etapa.filter(e => e.nombre === 'GRADO_MEDIO' || e.nombre === 'GRADO_SUPERIOR');
+            
+            tipoDisciplinaEl.addEventListener('change', async () => {
+
+              if(tipoDisciplinaEl.value === 'FP') {
+					      etapaFilter = etapa.filter(e => e.nombre === 'GRADO_MEDIO' || e.nombre === 'GRADO_SUPERIOR');
+				      }else {
+					      etapaFilter = etapa.filter(e => e.nombre !== 'GRADO_MEDIO' && e.nombre !== 'GRADO_SUPERIOR');
+				      }
+
+				etapaEl.innerHTML = '';
+				disabledOptionetapaEl = document.createElement('option');
+				disabledOptionetapaEl.setAttribute('disabled', '');
+				disabledOptionetapaEl.setAttribute('selected', '');
+				disabledOptionetapaEl.innerText = '---';
+				etapaEl.appendChild(disabledOptionetapaEl);
+				etapaFilter.map(e => {
+					let opt = document.createElement('option');
+					opt.value = e._id;
+					opt.dataset.cursos = e.n_cursos;
+					opt.innerText = e.nombre;
+					etapaEl.appendChild(opt);
+				})
+			})
+
+            etapaFilter.map(e => {
                 let opt = document.createElement('option');
                 opt.value = e._id;
                 opt.dataset.cursos = e.n_cursos;
@@ -309,7 +343,6 @@
             etapaEl.addEventListener("change", async (event) => {
               const currentEtapa = etapaEl.value;
               const n_cursos_etapa = event.target.options[event.target.selectedIndex].dataset.cursos;
-
 
               let responseFP = await fetch(`/select_fp/${currentEtapa}`);
               currentFP = await responseFP.json();
@@ -384,7 +417,7 @@
 </script> 
 
 
-<!--SCRIPT PARA ASIGNATURAS  -->
+<!--SCRIPT PARA ASIGNATURAS-->
 
 <script>
 
