--- a/src/views/mod_profesores.hbs
+++ b/src/views/mod_profesores.hbs
@@ -67,7 +67,7 @@
 									</div>
 									<div class="form-group">
 										<label class="control-label">¿De que tipo de etapa es tutor?</label>
-										<select class="form-control" name="tipo_etapa" id="tipo_etapa">
+										<select class="form-control" name="tipoDisciplina" id="tipo_etapa">
 										   <option disabled selected>-----</option>
 										   <option value="FP">FP</option>
 										   <option value="Etapa">ESO o Bachiller</option>
@@ -173,7 +173,7 @@
 	</div>
 </div>
 
-<!-- SCRIPT PARA ILUSION -->
+<!-- SCRIPT GEMINIS -->
 
 <script>
 
