--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -56,7 +56,7 @@
 							<a href="/mod_festivos"><i class="zmdi zmdi-book zmdi-hc-fw"></i>Modificacion de Festivos</a>
 						</li>
 						<li>
-							<a href="/mod_FCT"><i class="zmdi zmdi-font zmdi-hc-fw"></i>Modificacion de FCT</a>
+							<a href="/alumnos_FCT"><i class="zmdi zmdi-font zmdi-hc-fw"></i>Modificacion de FCT</a>
 						</li>
 					</ul>
 				</li>
