--- a/src/views/mod_FCT.hbs
+++ b/src/views/mod_FCT.hbs
@@ -20,46 +20,41 @@
               <div class="col-xs-12 col-md-10 col-md-offset-1">
                 <form method="post">
                    <input type="hidden" name="_method" value="PUT">
-                   <div class="form-group">
-					      <label class="control-label">Seleccione un Alumno de 2ºFP</label>
-					      <select class="form-control" name="alumno" id="alumno">
-                    <option selected disabled>---</option>
-                     </select>
-                  </div>
+					         <input name="alumno" id="alumno" type="hidden" value="{{FCT.alumno}}">
                   <div class="form-group">
 					      <label  class="control-label">Elija su empresa</label>
 					      <select class="form-control" name="empresa" id="empresa" >
                           {{#each empresas as | Empresas |}}
-                          <option value="{{Empresas._id}}"> {{Empresas.name}} </option>
+                          <option value="{{Empresas._id}}">{{Empresas.name}}</option>
                           {{/each}}
                      </select>
                   </div>
                   <div class="form-group">
 					      <label class="control-label">Elija el profesor que hara de tutor</label>
-					      <select class="form-control" name="tutor" id="tutor" >
-                    <option selected disabled>---</option>
+					      <select class="form-control" name="tutor" id="tutor">
+                         <option disabled selected>----</option>
                      </select>
                   </div>
                   <div class="form-group label-floating">
                     <label class="control-label">Tutor laboral en la empresa</label>
-                    <input class="form-control" name="tutor_laboral" id="tutor_laboral" type="text" />
+                    <input class="form-control" name="tutor_laboral" id="tutor_laboral" type="text" value="{{FCT.tutor_laboral}}"/>
                   </div>
 				      <div class="form-group label-floating">
 					          <label class="control-label">Trimestre en el que se realizaran las practicas (1,2,3)</label>
-				          <input type="number" class="number" name="trimestre" id="trimestre" min="1", max="3"/>
+				          <input type="number" class="number" name="trimestre" id="trimestre" min="1", max="3" value="{{FCT.trimestre}}"/>
 					    </div>
             
               <div class="form-group label-floating">
 					          <label class="control-label">Horas que realizara el alumno (6-8)</label>
-				          <input type="number" class="number" name="horas" id="horas" min="6", max="8"/>
+				          <input type="number" class="number" name="horas" id="horas" min="6", max="8" value="{{FCT.horas}}"/>
 					    </div>
                   <div class="form-group label-floating">
                     <label>Inicio de las practicas</label>
-                    <input class="form-control" name="fecha_inicio" type="date"/>
+                    <input class="form-control" name="fecha_inicio" type="date" value="{{FCT.fecha_inicio}}"/>
                   </div>
                   <div class="form-group label-floating">
                     <label>Final de las practicas</label>
-                    <input class="form-control" name="fecha_final" type="date"/>
+                    <input class="form-control" name="fecha_final" type="date" value="{{FCT.fecha_final}}"/>
                   </div>
                   <p class="text-center">
                     <button class="btn btn-info btn-raised btn-sm"><i class="zmdi zmdi-floppy"></i>Save</button>
@@ -93,8 +88,6 @@
                 opt.innerText = p.firstName;
                 profesFP.appendChild(opt);
             })
-
-      console.log(profesFP);
   })()
 
 </script>
@@ -116,7 +109,8 @@
                 alumnos2ºFP.appendChild(opt);
             })
 
-      console.log(profesFP);
+            
   })()
 
 </script>
+
