Creacion de form para asignaturas por etapa

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -47,13 +47,13 @@
 					</a>
 					<ul class="list-unstyled full-box">
 						<li>
-							<a href="/mod_ciclos"><i class="zmdi zmdi-book zmdi-hc-fw"></i>Modificacion de ciclos</a>
+							<a href="/etapas"><i class="zmdi zmdi-book zmdi-hc-fw"></i>Modificacion de ciclos</a>
 						</li>
 						<li>
 							<a href="/empresas"><i class="zmdi zmdi-book zmdi-hc-fw"></i>Modificacion de empresas</a>
 						</li>
 						<li>
-							<a href="/mod_festivos"><i class="zmdi zmdi-book zmdi-hc-fw"></i>Modificacion de Festivos</a>
+							<a href="/festivos"><i class="zmdi zmdi-book zmdi-hc-fw"></i>Modificacion de Festivos</a>
 						</li>
 						<li>
 							<a href="/alumnos_FCT"><i class="zmdi zmdi-font zmdi-hc-fw"></i>Modificacion de FCT</a>
