--- a/src/views/registrar_festivo.hbs
+++ b/src/views/registrar_festivo.hbs
@@ -9,7 +9,7 @@
 	<div class="row">
 		<div class="col-xs-12">
 			<ul class="nav nav-tabs" style="margin-bottom: 15px;">
-				<li class="active"><a href="#new" data-toggle="tab">Nuevo</a></li>
+				<li class="active"><a href="/registrar_festivo">Nuevo</a></li>
 				<li><a href="/festivos">Listado de Festivos</a></li>
 			</ul>
 			<div id="myTabContent" class="tab-content">
