--- a/src/views/mod_festivo.hbs
+++ b/src/views/mod_festivo.hbs
@@ -18,21 +18,22 @@
 						<div class="row">
 							<div class="col-xs-12 col-md-10 col-md-offset-1">
 								<form method="post">
+									<input type="hidden" name="_method" value="PUT">
 									<div class="form-group label-floating">
 										<label class="control-label">Nombre</label>
-										<input class="form-control" name="nombre" type="text">
+										<input class="form-control" name="nombre" type="text" value="{{festivo.nombre}}"/>
 									</div>
 									<div class="form-group">
 										<label class="control-label">¿ Es una fiesta nacional ?</label>
-										<input name="nacional" id="nacional" type="checkbox" value="true">
+										<input name="nacional" id="nacional" type="checkbox" value="{{festivo.nacional}}"/>
 									</div>
                                     <div class="form-group label-floating">
 										<label class="control-label">Dia del festivo</label>
-										<input class="form-control" name="dia" type="number" min="1" max="31">
+										<input class="form-control" name="dia" type="number" min="1" max="31" value="{{festivo.dia}}">
 									</div>
                                     <div class="form-group label-floating">
 										<label class="control-label">Mes del Festivo</label>
-										<input class="form-control" name="mes" type="number" min="1" max="12">
+										<input class="form-control" name="mes" type="number" min="1" max="12" value="{{festivo.mes}}">
 									</div>
 									<!--PROVINCIA Y LOCALIDAD-->
 									<div class="form-group">
@@ -56,7 +57,6 @@
 				</div>
 				<div class="tab-pane fade" id="list">
 					<div class="table-responsive">
-						
 					</div>
 				</div>
 			</div>
